
# The Nectaur [EXPERIMENTAL]
* A new neutral mob found only in the Underhang.
* Will form small groups.
* Are temporarily using Chicken sounds!

# Technical features:
* Added the new item tag "whiskbill_food"


# Changes to existing features:
* Chiseled Polished Bystone and Byslate are now craftable.
* Ancient Hooks are now craftable.
* Verdigris Ingots are now craftable.
* Alpha Moss Blocks are now bonemealable.
* Underhang water color has been adjusted.
* Underhang ambience now plays 50% less of the time.
* Copperbugs, Pests, and Trilobites are now considered "Arthopods".
* Copperbugs now scrape any Copper Blocks they find.
* Claystone Farmland is now hydratable by Water.
* Sprinkler now bonemeals crop randomly 20% less.
* Pests now consume crops 50% more.
* Big Beaks now have a health range of 5 - 7 hearts.
* Big Beaks now drop Poultry or Cooked Poultry when they die.
* Mossy Claystone now boosts Sniffer eggs hatch rates.
* Glow Gourd Vines now grow.
* Glow Gourd Vines are now obtainable in Survival via Shears.
* Montsechia texture has been changed.
* Montsechia now crafts into White Dye instead of Light Blue Dye.
* Creosote and Creosote Sprout textures have been changed.
* Creosote and Creosote Sprouts now generate in the Primordial Ocean.
* Byslate no longer requires iron tools to break.
* Bygone Mineshafts no longer generate with Cave Spider spawners.
* Removed Umber.
* Removed Umber Bricks.


# Bugs fixed:
* Fixed crash related to Blemish Catalysts!
* Fixed crash related to mixins clashing!
* Fixed crash related to Mooboos in the Bygone!
* Fixed mobs generally just not spawning in the Underhang!
* Fixed both Polished Bystone and Polished Byslate family of blocks from not having stonecutter recipes!
* Fixed Big Beak subtitles not being translated!
* Fixed Big Beaks model from overlapping!
* Fixed Glares having a incorrect hitbox!
* Fixed Shelfhollows biome name not being translated!
* Fixed a specific fossil generating one block in the air.