@@ -1,13 +1,0 @@
-{
-  "type": "minecraft:blasting",
-  "category": "misc",
-  "cookingtime": 100,
-  "experience": 0.1,
-  "group": "coal",
-  "ingredient": {
-    "item": "bygone:verdigris_scrap"
-  },
-  "result": {
-    "id": "bygone:verdigris_ingot"
-  }
-}
