@@ -97,6 +97,7 @@
 * Chiseled Polished Bystone and Byslate are now craftable.
 * Ancient Hooks are now craftable.
 * Verdigris Ingots are now craftable.
+* Amaranth Grain is now craftable from Amaranth Bales.
 * Alpha Moss Blocks are now bonemealable.
 * Underhang water color has been adjusted.
 * Underhang ambience now plays 50% less of the time.
